--- a/wp-content/themes/cmp/assets/styles/pages/_things-to-do-page.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_things-to-do-page.scss
@@ -13,7 +13,7 @@
     }
 
     h3 {
-      font-family: 'Roboto';
+      font-family: $base-font-family;
       font-size: 1.5em;
       @include grid-media($large) {
         font-size: 1em;
